# croco

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  init
inc/: commands.h  croco.h  files.h  fmanager.h  help.h  util.h
src/: commands.c  croco.c  files.c  fmanager.c  fmanager.h  help.c  keys.h  main.c  util.c
